[package]
name = "chrisomatic"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
http = "1.3.1"
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9.2"

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }
