[package]
name = "chrisomatic"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.1"
chris-oag = { git = "https://github.com/fnndsc/openapi-clients", version = "0.0.1" }
compact_str = { version = "0.9.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
http = "1.3.1"
nonempty = "0.12.0"
nutype = { version = "0.6.1", features = ["serde"] }
petgraph = "0.8.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9.2"

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }
