[package]
name = "chrisomatic_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrisomatic_step = { path = "../chrisomatic_step"}
chrisomatic_spec = { path = "../chrisomatic_spec"}
chrisomatic_step_macro = { path = "../chrisomatic_step_macro" }
async-stream = "0.3.6"
bytes = "1.10.1"
chris-oag = { git = "https://github.com/fnndsc/openapi-clients", version = "0.0.1" }
futures-concurrency = "7.6.3"
futures-lite = "2.6.0"
nonempty = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
petgraph = "0.8.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.12"

[dev-dependencies]
compact_str = "0.9.0"
pretty_assertions = "1.4.1"
rstest = { version = "0.25.0", default-features = false }
tokio = { version = "1.47.0", features = ["macros"] }
warp = { version = "0.3.7", default-features = false }
