[package]
name = "chrisomatic_spec"
version = "0.1.0"
edition = "2024"

[dependencies]
compact_str = { version = "0.9", features = ["serde"] }
nutype = { version = "0.6", features = ["serde"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rstest = { version = "0.25.0", default-features = false }
toml = "0.9.2"
