[package]
name = "chrisomatic_web"
description = "JS bindings for chrisomatic, the ChRIS setup tool"
repository = "https://github.com/FNNDSC/chrisomatic2"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
chrisomatic_core = { path = "../chrisomatic_core" }
chrisomatic_spec = { path = "../chrisomatic_spec" }
js-sys = "0.3.77"
reqwest = { version = "0.12.22", default-features = false }
toml = "0.9.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[lib]
crate-type = ["cdylib"]
